# USDGcoin

./: .appveyor.yml  .gitignore  COPYING  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
.github/workflows/: build.yml
build_msvc/: vcpkg.json
build_msvc/testconsensus/: testconsensus.cpp
ci/test/: 05_before_script.sh  (+3 more)
contrib/: install_db4.sh  usdg-cli.bash-completion  usdg-tx.bash-completion  usdgd.bash-completion  valgrind.supp
depends/: README.md  packages.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  files.md  tor.md  zmq.md
doc/man/: Makefile.am  usdg-cli.1  usdg-qt.1  usdg-tx.1  usdg-util.1  usdg-wallet.1  usdgd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  coins.h  dbwrapper.cpp  init.cpp  init.h  miner.cpp  miner.h  net_processing.cpp  netaddress.h  netbase.h  outputtype.cpp  pos.cpp  protocol.h  tinyformat.h  txdb.cpp  validation.cpp  validation.h  version.h
(+166 files in other folders)
